--- a/src/index.css
+++ b/src/index.css
@@ -29,4 +29,10 @@ code {
   .input {
     @apply w-full h-32 border border-gray-400 focus:border-purple-300 rounded-md mt-4 p-2
   }
+  .h1 {
+    @apply text-4xl mb-4
+  }
+  .h4 {
+    @apply text-xl mb-4
+  }
 }
